feat:integrated transaction history
