# httpserver/dto/transaction_history_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateTransactionDto struct {
+	ProductID int  `json:"product_id"`
+	Quantity  uint `json:"quantity"`
+}
